# alita-sdk

./: .dockerignore  .gitignore  Dockerfile.mutation-worker  README.md  alita_local.py  demo_agent.py  docker-compose.mutation.yml  docker-compose.yml  dockerfile.baseimage  pyproject.toml  requirements-community.txt  requirements.txt  setup.py  test.py  xray.py
.alita/: AC_Analysis_Implementation_Plan.md  AC_Enricher_Agent.txt  AC_Pipeline_Flow_Diagram.md  ADO_AC_Enricher.yaml  ADO_ACs.yaml  ADO_Fetcher.yaml  ADO_Fetcher_Agent.txt  ADO_Item_Hierarchy_Fetcher.yaml  ADO_Item_Hierarchy_Fetcher_v2.yaml  ARCHITECTURE_OVERVIEW.md  AdoItemStateAssistant_v2.txt  Feature_Readiness_Analyzer.txt  README_AC_PROCESSING.md  ado_fetcher_descr.txt  ado_ihf_descr.txt  fetch.yaml  fetcher.description.md  fetcher.yaml  mcp.json  orchestrator_descr_enhanced.txt  orchestrator_enhanced.txt  orchestrator_init.txt  skill_descr.txt  skill_descr_enhanced.txt  skill_example_create.yaml  skill_init.yaml  skill_init_enhanced.yaml  test-data-generator.agent.md  test-runner.agent.md  wi_fetcher.description.md  wi_fetcher.yaml
.alita/agents/: ALITA_ARCHITECTURE.md  README.md  bug-reporter.agent.md  pr-impact-analyzer.agent.md  test-case-generator.agent.md  test-data-generator.agent.md  test-fixer.agent.md  test-runner.agent.md  test-validator.agent.md
.alita/tests/: README.md
.alita/tool_configs/: ado-config.json  ado-wiki-config.json  artifact-config.json  confluence-config.json  figma-config.json  git-config.json  github-bug-reporter-config.json  jira-config.json  planning-local-config.json  planning-postgres-config.json
.github/: copilot-instructions.md
.github/agents/: bug-reporter-agent.md  fix-impact-analyzer.agent.md  loader-test-creator-new.agent.md  loader-test-creator.agent.md  test-coverage-analyzer.agent.md  test-creator.agent.md  test-data-generator.agent.json  test-data-generator.agent.md  test-failure-detector.agent.md  test-fixer.agent.md  test-implementator.agent.md  test-runner.agent.json  test-runner.agent.md  testing-orcestrated.agent.md
.github/ai_native/: README.md  TC-004_get_workflow_status.md  (+1 more)
Ado-board-report/: ADO_all_scenarios_test_results.md
alita_sdk/: __init__.py
docs/: AlitaBDDScenariosLoader.py_doc.md  AlitaCSVLoader.py_doc.md  AlitaCallback.py_doc.md  AlitaConfluenceLoader.py_doc.md  AlitaDirectoryLoader.py_doc.md  AlitaDocxMammothLoader.py_doc.md  AlitaExcelLoader.py_doc.md  AlitaGitRepoLoader.py_doc.md  AlitaImageLoader.py_doc.md  AlitaJiraLoader.py_doc.md  AlitaQtestLoader.py_doc.md  AlitaRetriever.py_doc.md  AlitaTableLoader.py_doc.md  README.md  VectorstoreRetriever.py_doc.md  alita.py_doc.md  api_wrapper.py_doc.md  application.py_doc.md  artifact.py_doc.md  assistant.py_doc.md  bdd_exceptions.py_doc.md  bdd_parser.py_doc.md  chat_message_template.py_doc.md  check_input.py_doc.md  circuit_breaker.py_doc.md  client.py_doc.md  constants.py_doc.md  convert_to_datetime.py_doc.md  datasource.py_doc.md  echo.py_doc.md  evaluate.py_doc.md  excel_manager.py_doc.md  exceptions.py_doc.md  feature_types.py_doc.md  file_manager_gui.py_doc.md  function.py_doc.md  git.py_doc.md  indexer.py_doc.md  indexer_tool.py_doc.md  jira_all_fields_overview.py_doc.md  (+43 more)
infra/: dockerfile.baseimage
package/: build_lambda.sh  handler.py  requirements.txt
req_bkup/: requirements-all.txt  requirements-runtime.txt  requirements-tools.txt
scripts/: check_dependencies.sh
tests/: conftest.py  loader_helpers.py  test_ado_analysis.py  test_chunking_support.py  test_github_analysis.py  test_gitlab_analysis.py  test_jira_analysis.py  test_sensitive_tools_pipeline.py
(+1923 files in other folders)
